<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edit_contact_name"/>

    <EditText
        android:id="@+id/phone_number_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/edit_contact_phone"/>

    <EditText
        android:id="@+id/mail_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/edit_contact_mail"/>

    <Button
        android:id="@+id/confirm_contact_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_contact_confirmation"
        android:onClick="confirmContactChanges"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        android:onClick="cancelContactChanges"/>

</LinearLayout>