<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spadteam.spad.CreateEvent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint"
            android:text="+33685755302"/>

        <EditText
            android:id="@+id/event_content_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_content_hint"/>

        <Button
            android:id="@+id/event_creation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_event"
            android:onClick="onMessageButtonClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="access contacts"
            android:onClick="readContacts"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
