<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.spadteam.spad.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/create_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_event"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/review_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review_events"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/manage_contacts_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_contacts"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
